@@ -13,8 +13,6 @@ sub register($$$$$$$$$;@) {
    my($function,$blurb,$help,$author,$copyright,$date,
       $menupath,$imagetypes,$params,$code)=@_;
    $function =~ s%^perl_fu_%logulator_% or die;
-   my $mp = N_"<Image>/Filters/Logulator";
-   $menupath =~ s%([^/]+)$%$mp/$1% or die;
    my($i,$j)=0;
    my($ti,$fsi,$fi);
    $i=@$params;
@@ -186,7 +184,7 @@ register "perl_fu_3d_outline_logo",
    "Hrvoje Horvat (hhorvat\@open.hr)",
    "Hrvoje Horvat",
    "07 April, 1998",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/3D Outline",
+   N_"<Image>/Filters/Logulator/3D Outline",
    "",
    [
       [PF_PATTERN,   'pattern',          "Pattern", "Parque #1"],
@@ -248,7 +246,7 @@ register "perl_fu_alien_glow_logo",
    "Spencer Kimball",
    "Spencer Kimball",
    "1997",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Alien Glow",
+   N_"<Image>/Filters/Logulator/Alien Glow",
    "",
    [
       [PF_STRING,    'text_string',      "Text String", "ALIEN"],
@@ -302,7 +300,7 @@ register "perl_fu_basic1_logo",
    "Spencer Kimball",
    "Spencer Kimball",
    "1996",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Basic I",
+   N_"<Image>/Filters/Logulator/Basic I",
    "",
    [
       [PF_STRING,    'text_string',      "Text String", "The Gimp"],
@@ -378,7 +376,7 @@ register "perl_fu_basic2_logo",
    "Spencer Kimball",
    "Spencer Kimball",
    "1996",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Basic II",
+   N_"<Image>/Filters/Logulator/Basic II",
    "",
    [
       [PF_STRING,    'text_string',      "Text String", "SCRIPT-FU"],
@@ -548,7 +546,7 @@ register "perl_fu_carved_logo",
    "Spencer Kimball",
    "Spencer Kimball",
    "1997",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Carved",
+   N_"<Image>/Filters/Logulator/Carved",
    "",
    [
       [PF_STRING,    'text_string',      "Text String", "Marble"],
@@ -604,7 +602,7 @@ register "perl_fu_chalk_logo",
    "Manish Singh <msingh\@uclink4.berkeley.edu>",
    "Manish Singh",
    "October 1997",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Chalk",
+   N_"<Image>/Filters/Logulator/Chalk",
    "",
    [
       [PF_STRING,    'text_string',      "Text String", "CHALK"],
@@ -691,7 +689,7 @@ register "perl_fu_logo_chip_away",
    "Adrian Likins <adrian\@gimp.org>",
    "Adrian Likins <adrian\@gimp.org>",
    "1997",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Chip Away",
+   N_"<Image>/Filters/Logulator/Chip Away",
    "",
    [
       [PF_STRING,    'text_string',      "Text String", "Sloth"],
@@ -785,7 +783,7 @@ register "perl_fu_chrome_logo",
    "Spencer Kimball",
    "Spencer Kimball & Peter Mattis",
    "1997",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Chrome",
+   N_"<Image>/Filters/Logulator/Chrome",
    "",
    [
       [PF_STRING,    'text_string',      "Text String", "The GIMP"],
@@ -860,7 +858,7 @@ register "perl_fu_comic_logo",
    "Brian McFee <keebler\@wco.com>",
    "Brian McFee",
    "April 1998",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Comic Book",
+   N_"<Image>/Filters/Logulator/Comic Book",
    "",
    [
       [PF_STRING,    'text_string',      "Text String", "Moo"],
@@ -964,7 +962,7 @@ register "perl_fu_cool_metal_logo",
    "Spencer Kimball & Rob Malda",
    "Spencer Kimball & Rob Malda",
    "1997",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Cool Metal",
+   N_"<Image>/Filters/Logulator/Cool Metal",
    "",
    [
       [PF_STRING,    'text_string',      "Text String", "Cool Metal"],
@@ -1185,7 +1183,7 @@ register "perl_fu_crystal_logo",
    "Spencer Kimball",
    "Spencer Kimball",
    "1997",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Crystal",
+   N_"<Image>/Filters/Logulator/Crystal",
    "",
    [
       [PF_VALUE,     'chrome_factor',    "Chrome Factor", "1.0"],
@@ -1279,7 +1277,7 @@ register "perl_fu_frosty_logo",
    "Spencer Kimball & Ed Mackey",
    "Spencer Kimball & Ed Mackey",
    "1997",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Frosty",
+   N_"<Image>/Filters/Logulator/Frosty",
    "",
    [
       [PF_STRING,    'text_string',      "Text String", "The GIMP"],
@@ -1381,7 +1379,7 @@ register "perl_fu_glossy_logo",
    "Hrvoje Horvat (hhorvat\@open.hr)",
    "Hrvoje Horvat",
    "14/04/1998",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Glossy",
+   N_"<Image>/Filters/Logulator/Glossy",
    "",
    [
       [PF_STRING,    'text_string',      "Text String", "Galaxy"],
@@ -1464,7 +1462,7 @@ register "perl_fu_glowing_logo",
    "Spencer Kimball",
    "Spencer Kimball",
    "1997",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Glowing Hot",
+   N_"<Image>/Filters/Logulator/Glowing Hot",
    "",
    [
       [PF_STRING,    'text_string',      "Text String", "GLOWING"],
@@ -1533,7 +1531,7 @@ register "perl_fu_gradient_bevel_logo",
    "Brian McFee <keebler\@wco.com>",
    "Brian McFee",
    "April 1998",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Gradient Bevel",
+   N_"<Image>/Filters/Logulator/Gradient Bevel",
    "",
    [
       [PF_STRING,    'text_string',      "Text String", "Moo"],
@@ -1612,7 +1610,7 @@ register "perl_fu_i26_gunya2",
    "Shuji Narazaki",
    "Shuji Narazaki",
    "1997",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Imigre-26",
+   N_"<Image>/Filters/Logulator/Imigre-26",
    "",
    [
       [PF_STRING,    'text_string',      "Text", "The GIMP"],
@@ -1804,7 +1802,7 @@ register "perl_fu_neon_logo",
    "Spencer Kimball",
    "Spencer Kimball",
    "1997",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Neon",
+   N_"<Image>/Filters/Logulator/Neon",
    "",
    [
       [PF_STRING,    'text_string',      "Text String", "NEON"],
@@ -1854,7 +1852,7 @@ register "perl_fu_newsprint_text",
    "Austin Donnelly",
    "Austin Donnelly",
    "1998",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Newsprint text",
+   N_"<Image>/Filters/Logulator/Newsprint text",
    "",
    [
       [PF_STRING,    'text_string',      "Text String", "Newsprint"],
@@ -2075,7 +2073,7 @@ register "perl_fu_sota_chrome_logo",
    "Spencer Kimball",
    "Spencer Kimball",
    "1997",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/SOTA Chrome",
+   N_"<Image>/Filters/Logulator/SOTA Chrome",
    "",
    [
       [PF_ADJUSTMENT,'chrome_saturation',"Chrome Saturation", [-80, -100, 100, 1, 10, 0, 0]],
@@ -2143,7 +2141,7 @@ register "perl_fu_speed_text",
    "Austin Donnelly",
    "Austin Donnelly",
    "1998",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Speed text",
+   N_"<Image>/Filters/Logulator/Speed text",
    "",
    [
       [PF_STRING,    'text_string',      "Text String", "Speed!"],
@@ -2220,7 +2218,7 @@ register "perl_fu_starburst_logo",
    "Spencer Kimball & Xach Beane",
    "Spencer Kimball & Xach Beane",
    "1997",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Starburst",
+   N_"<Image>/Filters/Logulator/Starburst",
    "",
    [
       [PF_STRING,    'text_string',      "Text String", "GIMP"],
@@ -2351,7 +2349,7 @@ register "perl_fu_starscape_logo",
    "Spencer Kimball",
    "Spencer Kimball",
    "1997",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Starscape",
+   N_"<Image>/Filters/Logulator/Starscape",
    "",
    [
       [PF_STRING,    'text_string',      "Text String", "Nova"],
@@ -2448,7 +2446,7 @@ register "perl_fu_t_o_p_logo",
    "Shuji Narazaki (narazaki\@InetQ.or.jp)",
    "Shuji Narazaki",
    "1997",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Particle Trace",
+   N_"<Image>/Filters/Logulator/Particle Trace",
    "",
    [
       [PF_STRING,    'text_string',      "Text String", "The GIMP"],
@@ -2546,7 +2544,7 @@ register "perl_fu_textured_logo",
    "Spencer Kimball",
    "Spencer Kimball",
    "1996",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Textured",
+   N_"<Image>/Filters/Logulator/Textured",
    "",
    [
       [PF_PATTERN,   'text_pattern',     "Text Pattern", "Fibers"],
@@ -2617,7 +2615,7 @@ register "perl_fu_bovinated_logo",
    "Brian McFee <keebler\@wco.com>",
    "Brian McFee",
    "April 1998",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Bovination",
+   N_"<Image>/Filters/Logulator/Bovination",
    "",
    [
       [PF_STRING,    'text_string',      "Text String", "Fear the Cow"],
@@ -2708,7 +2706,7 @@ register "perl_fu_blended_logo",
    "Spencer Kimball",
    "Spencer Kimball",
    "1996",
-   N_"<Toolbox>/Xtns/Perl-Fu/Logos/Blended",
+   N_"<Image>/Filters/Logulator/Blended",
    "",
    [
       [PF_VALUE,     'blend_mode',       "Blend Mode", "FG_BG_HSV"],
